--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,26 @@
+body, h1, .container, .d-sm-flex {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
 // Graphical variables
 @import "config/fonts";
 @import "config/colors";
 @import "config/bootstrap_variables";
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
+
+$theme-colors: (
+  "primary": #012B4D,
+  "secondary": #997405,
+  "info": #14795B,
+  "success": #28a745,
+  "danger": #dc3545,
+  "warning": #ffc107,
+  "light": #f8f9fa,
+  "dark": #343a40,
+  "newwhite": #F2F3F4,
+);
 
 // External libraries
 @import "bootstrap";
@@ -10,3 +29,86 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+.navbar-custom {
+  background-color: #012B4D;
+}
+
+.brand-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.brand-container span {
+  margin-left: 10px;
+}
+
+.nav-item.active .nav-link {
+  text-decoration: underline;
+  font-family: 'Black Ops One', cursive;
+}
+
+.navbar-custom {
+  margin-bottom: 0 !important;
+}
+
+
+.bg-primary {
+  margin-top: 0;
+}
+
+.txt{
+  padding-top: 30px;
+  padding-bottom: 20px;
+  margin-right: 40px;
+  margin-left: 40px;
+  text-align: justify;
+  font-weight: bold;
+}
+
+.container {
+  max-width: 2000px; /* Adjust this value to suit your design */
+  margin: 0 auto; /* This centers the container if the viewport is wider than the max-width */
+}
+.img-fluid{
+  margin-left: 20px;
+  margin-right: 0px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@media screen and (max-width: 767px) {
+  .img-fluid{
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .h3 {
+    font-size: 20px;
+  }
+}
+
+
+.btn-black-ops {
+  font-weight: bold;
+  background-color: lighten(map-get($theme-colors, "info"), 12%);
+  color: map-get($theme-colors, "newwhite");
+  border-radius: 50px;
+  margin-top: 20px;
+}
+
+.section {
+  background-color: lighten(map-get($theme-colors, "newwhite"), 12%);
+}
+.section h3 {
+  font-size: 20px;
+  font-weight: bold;
+  color: map-get($theme-colors, "info");
+}
+
+.text-container {
+  margin-left: 40px;
+  font-weight: bold;
+  color: (map-get($theme-colors, "info"),12%);
+}
