--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,30 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<%# <h1>Pages#home</h1>
+<p>Find me in app/views/pages/home.html.erb</p> %>
+
+<div class="main_stuff pt-5 pb-5">
+  <div class="container">
+    <div class="cards">
+      <div class="featured">
+      <h2 class="main_headers">JOGO EM DESTAQUE</h2>
+      <div class="card-item">
+        <h3>Fluminense x Boca Juniors</h3>
+        <p>04/11 - Sábado - 16:00</p>
+        <p>Maracanã</p>
+        <img src="https://www.netflu.com.br/wp-content/uploads/2023/10/F7uTPiPWYAAADc3-e1696879024855-696x513.jpeg?mrf-size=m" alt="jogo destaque">
+      </div>
+      </div>
+    </div>
+
+    <div class="cards">
+      <h2 class="main_headers">ENCONTRE UM JOGO</h2>
+      <div class="find_games">
+        <div class="card-item">
+          <p>Procure uma data</p>
+          <p>Procure um estado</p>
+          <p>Procure um time</p>
+          <p>Há pessoas indo?</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
