--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,7 +28,7 @@
     <div class="row align-items-center">
       <div class="col-md-6 d-flex align-items-center justify-content-center mb-3" style="margin-bottom: 10px;">
         <h3 class="mob-md-0" style="margin-bottom: 0; font-family: 'Black Ops One', cursive; color: #333333; font-weight: 300; font-size: 32px; text-align: center;">
-          Search your favorite team
+          Find a match
         </h3>
       </div>
       <div class="col-md-6 text-center" style="margin-top: -10px;">
