--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,9 +6,17 @@
   <div class="form-inputs">
     <%= f.input :email, required: true, autofocus: true %>
 
+    <%= f.input :profile_picture, as: :file %>
+
+    <%= f.input :name, required: true %>
+    <%= f.input :language %>
+    <%= f.input :favourite_team %>
+    <%= f.input :preferences %>
+
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
+
 
     <%= f.input :password,
                 hint: "leave it blank if you don't want to change it",
