--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,11 +16,11 @@
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
   <ul class="navbar-nav ms-auto">
     <% if user_signed_in? %>
-      <li class="nav-item <%= 'active' if current_page?(home_path) %>">
-        <%= link_to "Home", home_path, class: "nav-link" %>
+      <li class="nav-item <%= 'active' if current_page?(root_path) %>">
+        <%= link_to "Home", root_path, class: "nav-link" %>
       </li>
-      <li class="nav-item <%= 'active' if current_page?(groups_path) %>">
-        <%= link_to "Groups", groups_path, class: "nav-link" %>
+      <li class="nav-item <%= 'active' if current_page?(root_path) %>">
+        <%= link_to "Groups", root_path, class: "nav-link" %>
       </li>
       <li class="nav-item <%= 'active' if current_page?(teams_path) %>">
         <%= link_to "Teams", teams_path, class: "nav-link" %>
