--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,3 +34,7 @@ $theme-colors: (
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+.card a:hover {
+  background-color:primary;
+}
