--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -58,30 +58,36 @@
 </section>
 
 <section>
-  <div class="container" style="background-color: primary;">
-  <h4 style="margin-top: 50px; text-align: center; color: warning; font-family: 'Black Ops One';">Today's Matches</h4>
-</div>
+  <div class="container">
+    <h4 style="margin-top: 50px; text-align: center;">Today's Matches</h4>
+  </div>
   <div class="p-5">
     <div class="container">
       <div class="row text-center">
-        <% @games.each do |game| %>
+        <% @games.first(5).each do |game| %>
           <div class="col-md-4 mb-4">
-            <div class="card bg-newwhite text-primary border-primary shadow" style="border-radius: 15px;">
-              <div class="card-body text-center">
+            <div class="card bg-newwhite text-primary border-primary shadow" style="border-radius: 15px; height: 200px; width: 100%;">
+              <div class="card-body d-flex flex-column justify-content-center align-items-center"> <!-- Add d-flex flex-column justify-content-center align-items-center here -->
                 <p><%= "#{game.home_team.name} vs #{game.away_team.name}"%></p>
                 <p><%= "#{game.city}, #{game.date}"%></p>
                 <p><%= link_to "View Game", game_path(game), class: "btn btn-warning rounded-pill shadow"%></p>
-              </div>
+                 </div>
             </div>
           </div>
         <% end %>
+        <div class="col-md-4 mb-4">
+          <div class="card bg-newwhite text-primary border-primary shadow" style="border-radius: 15px; height: 200px; width: 100%;"> <!-- Change the background and text color here -->
+           <div class="card-body d-flex flex-column justify-content-center align-items-center">
+    <h5>Checkout all available matches.</h5>
+    <br> <!-- This will add a gap between the text and the button -->
+    <p><%= link_to "Explore", games_path, class: "btn btn-primary rounded-pill shadow", style: "color: newwhite;"%></p> <!-- Switched the button color to primary -->
+</div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </section>
-
-
-
 
 
 <!-- Include necessary scripts for jQuery, Select2, and flatpickr -->
