--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -5,5 +5,21 @@
   <%= @group.game.home_team.name %> vs <%= @group.game.away_team.name %>
 </p>
 
-<%= link_to 'Join', join_game_group_path(@group.game, @group), method: :post %>
+<h2>Members:</h2>
+<ul>
+  <% @group.users.each do |user| %>
+    <li>
+      <%= user.name.presence || 'Unnamed User' %>
+      <% if current_user == @group.creator %>
+        <%= button_to 'Kick', kick_game_group_path(@group.game, @group, user_id: user.id), method: :delete, data: { confirm: 'Are you sure?' } %>
+      <% end %>
+    </li>
+  <% end %>
+</ul>
+
+<%= link_to 'Join', join_game_group_path(@group.game, @group), data: { turbo_method: :post } %>
 <%= link_to 'Edit', edit_game_group_path(@game, @group) %>
+<%= link_to 'Leave', leave_game_group_path(@group.game, @group), data: { turbo_method: :post } %>
+<%= simple_form_for @group, url: game_group_path(@group.game, @group), method: :delete do |f| %>
+  <%= f.button :submit, 'Delete', data: { confirm: 'Are you sure?' } %>
+<% end %>
