--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,45 +1,42 @@
-<div class="navbar navbar-expand-sm navbar-custom navbar-lewagon">
-  <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
-      <div class="brand-container">
-        <%= image_tag "logo.png" %>
-        <span style="font-family: 'Black Ops One', cursive; font-size: 30px; color: #F2F3F4;">Match Mate</span>
-      </div>
-    <% end %>
+<nav class="navbar navbar-expand-lg" style="background-color: #012B4D;">
+  <div class="container d-lg-flex align-items-center">
+    <div class="logo">
+      <%= image_tag 'logo.png', alt: 'logo', class: 'logo', width: '30' %>
+    </div>
+    <a href="#" class="navbar-title ms-lg-4 me-lg-auto" style="margin-left: 10px; color: #F2F3F4; font-family: 'Black Ops One', cursive; font-size: 30px; text-decoration: none;">Match Mate</a>
+    <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu" style="background-color: #F2F3F4;">
+      <span class="navbar-toggler-icon custom-toggler" style="border-color: #012B4D;"></span>
+    </button>
+
+    <div class="profile-picture d-none d-lg-block">
+      <% if user_signed_in? && current_user.profile_picture.attached? %>
+        <%= link_to profile_path, class: 'profile-link' do %>
+          <%= image_tag current_user.profile_picture.variant(resize: '30x30'), alt: 'profile picture', class: 'rounded-circle' %>
+        <% end %>
+      <% else %>
+        <%= image_tag 'https://placehold.co/40x40', alt: 'placeholder', class: 'rounded-circle', width: '30', height: '30' %>
+      <% end %>
+    </div>
   </div>
-</div>
 
-<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-  <span class="navbar-toggler-icon"></span>
-</button>
-
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
-  <ul class="navbar-nav ms-auto">
-    <li class="nav-item <%= 'active' if current_page?(root_path) %>">
-      <%= link_to "Home", root_path, class: "nav-link" %>
-    </li>
-    <%# Assuming you want to list groups for a specific game %>
-    <% if defined?(game) && game.present? %>
-      <li class="nav-item <%= 'active' if current_page?(game_groups_path(game)) %>">
-        <%= link_to "Groups", game_groups_path(game), class: "nav-link" %>
+  <div class="collapse navbar-collapse justify-content-end flex-column align-items-end" id="navmenu">
+    <ul class="navbar-nav ms-auto">
+      <li class="nav-item">
+        <%= link_to 'Home', root_path, class: 'nav-link', style: 'color: #ffc107;' %>
       </li>
-    <% else %>
-      <li class="nav-item <%= 'active' if current_page?(games_path) %>">
-        <%= link_to "Games", games_path, class: "nav-link" %>
+      <li class="nav-item">
+        <%= link_to 'Games', groups_path, class: 'nav-link', style: 'color: #ffc107;' %>
       </li>
-    <% end %>
-    <li class="nav-item dropdown">
-      <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
-      </a>
-      <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-        <%= link_to "Action", "#", class: "dropdown-item" %>
-        <%= link_to "Another action", "#", class: "dropdown-item" %>
-        <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-      </div>
-    </li>
-    <li class="nav-item">
-      <%= link_to "Login", new_user_session_path, class: "nav-link", style: "color: #F2F3F4;" %>
-    </li>
-  </ul>
-</div>
+      <li class="nav-item">
+        <%= link_to 'Groups', "/games/#{@game&.id}/groups", class: 'nav-link', style: 'color: #ffc107;' %>
+      </li>
+      <li class="nav-item me-4">
+        <% if user_signed_in? %>
+          <%= button_to 'Logout', destroy_user_session_path, method: :delete, class: 'btn btn-primary' %>
+        <% else %>
+          <%= link_to 'Login', new_user_session_path, class: 'btn btn-primary' %>
+        <% end %>
+      </li>
+    </ul>
+  </div>
+</nav>
