--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,6 +7,10 @@
   <div class="form-inputs">
     <%= f.input :email, required: true, autofocus: true %>
 
+
+    <%= f.input :photo, as: :file %>
+
+    <%= f.input :username, required: true %>
     <%= f.input :name, required: true %>
     <%= f.input :language %>
     <%= f.input :favourite_team %>
