--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-  <%= stylesheet_link_tag “application”, “data-turbo-track”: “reload” %>
+  <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
 
   <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
 
@@ -14,7 +14,7 @@
 
   <%= javascript_importmap_tags %>
   <%= favicon_link_tag asset_path('logo.png') %>
- 
+
 </head>
 <body>
   <%= render "shared/navbar" %>
