--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-        
+
 <nav class="navbar navbar-expand-lg" style="background-color: #012B4D;">
   <style>
     .navbar-title:hover {
@@ -33,9 +33,9 @@
     <a href="#" class="navbar-title ms-lg-4 me-lg-auto" style="margin-left: 10px; color: #F2F3F4; font-family: 'Black Ops One', cursive; font-size: 30px; text-decoration: none;">Match Mate</a>
 
     <div class="profile-picture me-2 d-lg-none">
-      <% if user_signed_in? && current_user.profile_picture.attached? %>
+      <% if user_signed_in? && current_user.photo.attached? %>
         <%= link_to profile_path do %>
-          <%= image_tag current_user.profile_picture.variant(resize: '30x30'), alt: 'profile picture', class: 'rounded-circle' %>
+          <%= image_tag current_user.photo.variant(resize: '30x30'), alt: 'profile picture', class: 'rounded-circle' %>
         <% end %>
       <% else %>
         <%= image_tag 'https://placehold.co/40x40', alt: 'placeholder', class: 'rounded-circle', width: '30', height: '30' %>
@@ -66,9 +66,9 @@
         </li>
         <li class="nav-item d-none d-lg-block">
           <div class="profile-picture">
-            <% if user_signed_in? && current_user.profile_picture.attached? %>
+            <% if user_signed_in? && current_user.photo.attached? %>
               <%= link_to profile_path do %>
-  <%= image_tag current_user.profile_picture.variant(resize: '30x30'), alt: 'profile picture', class: 'rounded-circle' %>
+  <%= image_tag current_user.photo.variant(resize: '30x30'), alt: 'profile picture', class: 'rounded-circle' %>
 <% end %>
             <% else %>
               <%= image_tag 'https://placehold.co/40x40', alt: 'placeholder', class: 'rounded-circle', width: '30', height: '30' %>
