--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,3 @@
-
 <section class="bg-primary text-light text-center">
   <div class="container" style="display: grid; grid-template-columns: 1fr 1fr;">
     <div class="txt" style="width: 100%; max-width: 600px; margin: 0 auto; display: flex; flex-direction: column; justify-content: center;">
@@ -11,7 +10,9 @@
       </p>
 
       <div class="d-flex align-items-center justify-content-center mb-3">
-        <button class="btn btn-primary btn-lg btn-black-ops">Sign up</button>
+        <%= link_to new_user_registration_path, class: "btn btn-primary btn-lg btn-black-ops" do %>
+          Sign up
+        <% end %>
       </div>
     </div>
 
