--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -15,4 +15,4 @@
     <% end %>
   </div>
 
-<%= link_to raw('<i class="fa fa-arrow-left text-warning" style="font-size: 2em; margin: 10px; text-shadow: 1px 1px 2px #888888;"></i>'), :back %>
+<%= link_to raw('<i class="fa fa-arrow-left text-warning" style="font-size: 2em; margin: 10px; text-shadow: 1px 1px 2px #888888;"></i>'), home_path %>
