--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,3 @@
-
 <nav class="navbar navbar-expand-lg" style="background-color: #012B4D;">
   <style>
     .navbar-title:hover {
@@ -15,10 +14,8 @@
   </style>
 
   <script>
-    // Get the current path from the URL
     const currentPath = window.location.pathname;
 
-    // Find the corresponding navbar link and add the 'active' class
     document.querySelectorAll('.navbar-nav .nav-link').forEach(function (link) {
       if (link.getAttribute('href') === currentPath) {
         link.classList.add('active');
@@ -28,9 +25,11 @@
 
   <div class="container d-lg-flex align-items-center">
     <div class="logo">
-      <%= image_tag 'logo.png', alt: 'logo', class: 'logo', width: '30' %>
+      <%= link_to root_path do %>
+        <%= image_tag 'logo.png', alt: 'logo', class: 'logo', width: '30' %>
+      <% end %>
     </div>
-    <a href="#" class="navbar-title ms-lg-4 me-lg-auto" style="margin-left: 10px; color: #F2F3F4; font-family: 'Black Ops One', cursive; font-size: 30px; text-decoration: none;">Match Mate</a>
+    <a href="<%= root_path %>" class="navbar-title ms-lg-4 me-lg-auto" style="margin-left: 10px; color: #F2F3F4; font-family: 'Black Ops One', cursive; font-size: 30px; text-decoration: none;">Match Mate</a>
 
     <div class="profile-picture me-2 d-lg-none">
       <% if user_signed_in? && current_user.photo.attached? %>
@@ -52,7 +51,7 @@
           <%= link_to 'Home', root_path, class: "nav-link #{'active' if current_page?(root_path)}", style: 'color: #ffc107;' %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Games', games_path, class: "nav-link #{'active' if current_page?(groups_path)}", style: 'color: #ffc107;' %>
+          <%= link_to 'Games', games_path, class: "nav-link #{'active' if current_page?(games_path)}", style: 'color: #ffc107;' %>
         </li>
         <li class="nav-item">
           <%= link_to 'Groups', groups_path, class: "nav-link #{'active' if current_page?(groups_path)}", style: 'color: #ffc107;' %>
@@ -68,8 +67,8 @@
           <div class="profile-picture">
             <% if user_signed_in? && current_user.photo.attached? %>
               <%= link_to profile_path do %>
-  <%= image_tag current_user.photo.variant(resize: '30x30'), alt: 'profile picture', class: 'rounded-circle' %>
-<% end %>
+                <%= image_tag current_user.photo.variant(resize: '30x30'), alt: 'profile picture', class: 'rounded-circle' %>
+              <% end %>
             <% else %>
               <%= image_tag 'https://placehold.co/40x40', alt: 'placeholder', class: 'rounded-circle', width: '30', height: '30' %>
             <% end %>
