--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
   <style>
     body {
-      background: linear-gradient(45deg, #ffc107, #1CAE82);
+      background: url('https://img.freepik.com/vetores-gratis/vista-superior-da-textura-do-estadio-de-grama-verde-de-futebol_107791-20406.jpg?w=1800&t=st=1701688827~exp=1701689427~hmac=0a3fc50a9c0c68ebbd21d9109739546d4f1916ed7daeff74993eb443ccaed517');
       font-family: 'Roboto', sans-serif;
       margin: 0;
     }
@@ -39,10 +39,7 @@
       margin-bottom: 20px;
     }
 
-    .form-container input[type="text"],
-    .form-container input[type="email"],
-    .form-container input[type="password"],
-    .form-container select {
+    .form-container p {
       width: calc(100% - 20px);
       padding: 8px;
       margin: 8px 0;
@@ -54,21 +51,13 @@
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
 
-    .form-container input[type="file"] {
-      border: none;
-    }
-
-    .form-container select {
-      width: 100%;
-    }
-
     .form-container .login-link,
     .form-actions {
       text-align: center;
       margin-top: 15px;
     }
 
-    .form-actions input[type="submit"] {
+    .form-actions a {
       background-color: #1CAE82;
       color: #fff;
       border: none;
@@ -77,9 +66,10 @@
       cursor: pointer;
       font-size: 14px;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      text-decoration: none;
     }
 
-    .form-actions input[type="submit"]:hover {
+    .form-actions a:hover {
       background-color: #ffc107;
     }
 
@@ -97,29 +87,29 @@
 
 <div class="form-container">
   <div class="navbar">
-    <h2>Sign up</h2>
+    <h2>Your Profile</h2>
   </div>
 
-  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= f.error_notification %>
+  <% if user_signed_in? %>
+    <% if @user.photo.attached? %>
+      <%= image_tag @user.photo.variant(resize: '100x100'), alt: 'profile picture', class: 'rounded-circle' %>
+    <% else %>
+      <%= image_tag 'https://placehold.co/100x100', alt: 'placeholder', class: 'rounded-circle' %>
+    <% end %>
 
-    <%= f.input :photo, as: :file %>
-    <%= f.input :name, required: true %>
-    <%= f.input :language %>
-    <%= f.input :favourite_team %>
-    <%= f.input :preferences %>
-    <%= f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email" } %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password" } %>
+    <p>Name: <%= @user.name %></p>
+    <p>Language: <%= @user.language %></p>
+    <p>Favourite Team: <%= @user.favourite_team %></p>
+    <p>Preferences: <%= @user.preferences %></p>
+    <p>Email: <%= @user.email %></p>
 
     <div class="form-actions">
-      <%= f.button :submit, "Sign up" %>
+      <%= link_to 'Edit Profile', edit_user_registration_path, class: 'btn btn-primary' %>
     </div>
+  <% else %>
+    <p>You need to sign in to view your profile.</p>
   <% end %>
 
-  <div class="login-link">
-    <p>Already signed up? <a href="<%= new_user_session_path %>">Let's log in</a>.</p>
-  </div>
 </div>
 
 </body>
