--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,9 +10,9 @@
         Chat, make friends, and plan match days together. Local fans can help you score tickets with tips and sharing the best deals. Sign up and jump into the action! 🇧🇷
       </p>
 
-      <div class="d-flex align-items-center justify-content-center mb-3">
-        <button class="btn btn-primary btn-lg btn-black-ops">Sign up</button>
-      </div>
+     <div class="d-flex align-items-center justify-content-center mb-3">
+  <button class="btn btn-info">Sign up</button>
+</div>
     </div>
 
     <div class="d-flex align-items-center justify-content-center">
@@ -52,7 +52,7 @@
             <option value="3">Location Three</option>
           </select>
         </div>
-        <button class="btn btn-primary m1-2" id="useMyLocation"><i class="fas fa-map-marker-alt"></i></button>
+        <button class="btn btn-info m1-2" id="useMyLocation"><i class="fas fa-map-marker-alt"></i></button>
       </div>
 
     </div>
