--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,29 +1,7 @@
-
-// Add the Select2 CSS
-@import "select2";
-
-// Add the Flatpickr CSS using a CDN link
-@import "flatpickr/dist/flatpickr.css";
-
-// Your existing styles...
-
-body, h1, .container, .d-sm-flex {
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
-}
-// Add the Flatpickr CSS using a CDN link
-
-// Graphical variables
-@import "config/fonts";
-@import "config/colors";
-@import "config/bootstrap_variables";
-@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
-
 $theme-colors: (
   "primary": #012B4D,
   "secondary": #997405,
-  "info": #14795B,
+  "info": #1CAE82,
   "success": #28a745,
   "danger": #dc3545,
   "warning": #ffc107,
@@ -32,13 +10,37 @@ $theme-colors: (
   "newwhite": #F2F3F4,
 );
 
-// External libraries
+body, h1, .container, .d-sm-flex {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
 @import "bootstrap";
 @import "font-awesome";
-
-// Your CSS partials
 @import "components/index";
 @import "pages/index";
-
 @import 'components/user_profile';
 
+.btn {
+  &.btn-info {
+    background-color: rgba(map-get($theme-colors, "info"), 0.8);
+    color: #F2F3F4;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+    font-family: 'Audiowide', sans-serif;
+    font-size: 1.4rem;
+    font-weight: bold;
+  }
+}
+
+.btn-lg {
+  font-size: 1.5rem;
+  padding: 0.75rem 1.5rem;
+}
+
+.btn-black-ops {
+  background-color: #000;
+  color: #fff;
+  border: 2px solid #000;
+}
