--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
       </p>
 
      <div class="d-flex align-items-center justify-content-center mb-3">
-  <button class="btn btn-info">Sign up</button>
+  <button class="btn btn-google">Sign up</button>
 </div>
     </div>
 
@@ -52,7 +52,7 @@
             <option value="3">Location Three</option>
           </select>
         </div>
-        <button class="btn btn-info m1-2" id="useMyLocation"><i class="fas fa-map-marker-alt"></i></button>
+        <button class="btn btn-google m1-2" id="useMyLocation"><i class="fas fa-map-marker-alt"></i></button>
       </div>
 
     </div>
@@ -82,7 +82,7 @@
            <div class="card-body d-flex flex-column justify-content-center align-items-center">
     <h5>Checkout all available matches.</h5>
     <br> <!-- This will add a gap between the text and the button -->
-    <p><%= link_to "Explore", games_path, class: "btn btn-primary rounded-pill shadow", style: "color: F2F3F4;"%></p>
+    <p><%= link_to "Explore", games_path, class: "btn btn-g3", style: "color: F2F3F4;"%></p>
 </div>
           </div>
         </div>
