--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,45 @@ body, h1, .container, .d-sm-flex {
 @import "pages/index";
 @import 'components/user_profile';
 
+.btn-google {
+  align-items: center;
+  appearance: none;
+  background-color: map-get($theme-colors, "info"); // Main button color
+  border-radius: 24px;
+  border-style: none;
+  box-shadow: rgba(0, 0, 0, .1) 0 2px 3px -1px, rgba(0, 0, 0, .08) 0 3px 4px 0, rgba(0, 0, 0, .06) 0 1px 5px 0;
+  box-sizing: border-box;
+  color: map-get($theme-colors, "newwhite"); // Text color
+  cursor: pointer;
+  display: inline-flex;
+  fill: currentcolor;
+  font-family: "Google Sans", Roboto, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  height: 48px;
+  justify-content: center;
+  letter-spacing: .25px;
+  line-height: normal;
+  max-width: 100%;
+  overflow: visible;
+  padding: 2px 24px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1), opacity 15ms linear 30ms, transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: auto;
+  will-change: transform, opacity;
+  z-index: 0;
+
+  &:hover {
+    background: map-get($theme-colors, "warning"); // Hover color
+    color: #174ea6; // Text color on hover
+  }
+}
+
 .btn {
   &.btn-info {
     background-color: rgba(map-get($theme-colors, "info"), 0.8);
@@ -34,13 +73,80 @@ body, h1, .container, .d-sm-flex {
   }
 }
 
-.btn-lg {
-  font-size: 1.5rem;
-  padding: 0.75rem 1.5rem;
+.btn-g2 {
+  align-items: center;
+  appearance: none;
+  background-color: map-get($theme-colors, "primary"); // Main button color
+  border-radius: 24px;
+  border-style: none;
+  box-shadow: rgba(0, 0, 0, .1) 0 2px 3px -1px, rgba(0, 0, 0, .08) 0 3px 4px 0, rgba(0, 0, 0, .06) 0 1px 5px 0;
+  box-sizing: border-box;
+  color: map-get($theme-colors, "newwhite"); // Text color
+  cursor: pointer;
+  display: inline-flex;
+  fill: currentcolor;
+  font-family: "Google Sans", Roboto, Arial, sans-serif;
+  font-size: 14px; // Adjust the font size
+  font-weight: bold;
+  height: 40px; // Adjust the height
+  justify-content: center;
+  letter-spacing: .25px;
+  line-height: normal;
+  max-width: 100%;
+  overflow: visible;
+  padding: 2px 16px; // Adjust the padding
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1), opacity 15ms linear 30ms, transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: auto;
+  will-change: transform, opacity;
+  z-index: 0;
+
+  &:hover {
+    background: map-get($theme-colors, "warning"); // Hover color
+    color: map-get($theme-colors, "primary"); // Text color on hover
+  }
 }
 
-.btn-black-ops {
-  background-color: #000;
-  color: #fff;
-  border: 2px solid #000;
+.btn-g3 {
+  align-items: center;
+  appearance: none;
+  background-color: map-get($theme-colors, "newwhite"); // Main button color
+  border-radius: 24px;
+  border-style: none;
+  box-shadow: rgba(0, 0, 0, .1) 0 2px 3px -1px, rgba(0, 0, 0, .08) 0 3px 4px 0, rgba(0, 0, 0, .06) 0 1px 5px 0;
+  box-sizing: border-box;
+  color: map-get($theme-colors, "primary"); // Text color
+  cursor: pointer;
+  display: inline-flex;
+  fill: currentcolor;
+  font-family: "Google Sans", Roboto, Arial, sans-serif;
+  font-size: 14px; // Adjust the font size
+  font-weight: bold;
+  height: 40px; // Adjust the height
+  justify-content: center;
+  letter-spacing: .25px;
+  line-height: normal;
+  max-width: 100%;
+  overflow: visible;
+  padding: 2px 16px; // Adjust the padding
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1), opacity 15ms linear 30ms, transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: auto;
+  will-change: transform, opacity;
+  z-index: 0;
+
+  &:hover {
+    background: map-get($theme-colors, "warning"); // Hover color
+    color: map-get($theme-colors, "primary"); // Text color on hover
+  }
 }
